# advent-of-code

./: .gitignore  README.md  log.txt  pyproject.toml
2022/: sol16_other.py  solution01a.py  solution01b.py  solution02a.py  solution02b.py  solution03a.py  solution03b.py  solution04a.py  solution04b.py  solution05a.py  solution05b.py  solution06.py  solution07.py  solution07_using_pathlib.py  solution08.py  solution09.py  solution10.py  solution11.py  solution12.py  solution13.py  solution14.py  solution14_with_sim.py  solution14_without_numpy.py  solution15.py  solution16.py  solution16_v2.py  solution17.py  solution18.py  solution19.py  solution20.py  solution21.py  solution22.py  solution22_test_all_nets.py  solution22_with_disp.py
aoclib/: __init__.py  complexarray.py  getinput.py  search.py  show.py  tuplevector.py
tests/: 2022_day_20.py  testing.ipynb  visualize_the_cube.ipynb
